@@ -1,3 +1,7 @@
+2005-01-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+	* include/commdlg.h (OFN_DONTADDTORECENT): Added definition.
+
 2005-01-18  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* lib/user32.def (MonitorFromPoint}: Correct suffix.
